# flower

./: .gitignore  README.md  pyproject.toml
flower/algorithms/: process_manager.py
flower/algorithms/flower_mip_data/: client.py  logistic_centralized.py  logistic_centralized_cv.py  server.py  utils.py
flower/algorithms/flower_mip_data_cv/: client.py  logistic_centralized_cv.py  metrics_centralized_federated.py  server.py  utils.py  y_pred_0_federated.csv  y_pred_3_federated.csv  y_pred_4_federated.csv  y_pred_centralized_0.csv  y_pred_centralized_1.csv  y_pred_centralized_2.csv  y_pred_centralized_3.csv  y_pred_centralized_4.csv
flower/algorithms/logistic_regression/: client.py  server.py  utils.py
flower/central_node/: Dockerfile  README.md
flower/central_node/celery/: app.py  node_tasks_handler.py
flower/central_node/flask/: app.py
flower/controller/celery/: app.py  worker_tasks_handler.py
flower/controller/flask/: app.py
flower/worker/: Dockerfile  README.md  bootstrap.sh  healthcheck.py
flower/worker/celery_tasks/: app.py  celery_config.py  client.py  tasks.py
rabbitmq/: Dockerfile  README.md
tests/test_data/longitudinal_dementia_v_0_1/: longitudinal_dementia0.csv  longitudinal_dementia1.csv  longitudinal_dementia2.csv
tests/test_data/tbi_v_0_1/: CDEsMetadata.json
