[tool.poetry]
name = "flower"
version = "0.1.0"
description = ""
authors = ["kfilippopolitis <kostasfilippop@gmail.com>", ]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
celery = "~5.3.1"
flask = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
