[tool.poetry]
name = "flower"
version = "0.1.0"
description = ""
authors = ["kfilippopolitis <kostasfilippop@gmail.com>", "ThanKarab <tkarabatsis@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
celery = "~5.3.1"
flask = "~3.0.2"
flwr = "~1.7.0"
scikit-learn = "~1.4.1"
pandas = "~2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
